app/assets/stylesheets/employees.scss
// Place all the styles related to the Employees controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

@import "bootstrap-sprockets";
@import "bootstrap";

.empl-filter-bar{
	.item{
		height: 1.9em;
		line-height: 1.9em;
		display: block;
		margin: 0 0.2%;
		color:#174877;
		padding: 1px 15px;
		margin: 2px 0;
		border-radius: 5px;
		text-decoration: none;
	}
	.item:hover{
		color:#002e5a;
		background-color: #fafafa;
	}
	a:hover{
		text-decoration: none;
	}
	.refine-label{
		margin: 10px 0 0 5px;
		text-align: left;
		font-size:1.5em;
		font-weight: 500;
  		color: #999999;
	}
	.create-ticket-e{
		width: 120px;
		margin: 25px 0 10px 0;
		padding: 5px 10px;
		color: #FFFFFF;
		text-align: center;
		font-weight: 450;
		font-size: 1.1em;
		background: #002e5a;
		border: 1px solid #f3f3f3;
		border-radius: 10px;
	}
}
.pop-up-container{
	position: fixed;
	z-index: 99;
	top: 50%;
  	left: 50%;
  	transform: translate(-50%, -50%);
	.pop-up{
		position: relative;
		margin: auto;
		padding: 0 20px 20px 20px;
		border: 1px solid #e8e8e8;
		border-radius: 10px;
		background: #FFFFFF;
	}
	.close-x{
		float: right;
		position: absolute;
		top: 20px;
		right: 20px;
	}
}

.order-drop{
	width: 120px;
	height: 33px;
	float: right;
	margin: 0 20px 0 0;
}
.order-drop:hover{
	background: #FFFFFF;
}

.employee-ticket-show{
    border-radius: 2px;
    background:#00346e;
    border: 1px solid #dfe0e4;
	padding: 10px 0;
	.ticket-padding{
		display: block;
		margin: 0 10px;
	}
	.element-bottom-padding{
		margin-bottom: 10px;
	}
}

/* Statistics */

#category_graph {
	width: 800px;
}

#category_graph1 {
	width: 800px;
	height: 300px;
}

#category_graph2 {
	top: 900px;
	width: 800px;
	height: 350px;
	padding: 50px 0px 0px 0px;
}

#website_graph1 {
	width: 800px;
	height: 275px;
}
#website_graph2 {
	top: 100px;
	width: 800px;
	height: 265px;
	padding: 15px 0px 0px 0px;
}

#website_graph3 {
	height: 300px;
	padding: 15px 0px 0px 0px;
}

.pwdStyle{
	margin-top: 20px;
	padding: 7px;
	background: #f6f6f6;
	border-radius: 5px;
	.pwdTitle{
		font-weight: 600;
		float: left;
	}
	.pwdLink{
		float: right;
		color: #b93e36;
	}
	.actLink{
		float: left;
		color: #b93e36;
		text-align: center;
		width: 100%;
	}
}

@media only screen and (max-device-width: 1024px) { /* Change to whatever media query you require */
    .mobile-fix{
        width: 20% !important;
    }
}

